@@ -31,7 +31,7 @@ requires:
   Exporter: 0
   List::MoreUtils: 0
   Mo: 0
-  Mo::utils: 0.01
+  Mo::utils: 0.02
   Readonly: 0
   Unicode::UTF8: 0
   perl: 5.6.2
